# cncjs

./: .dockerignore  .gitignore  Dockerfile.laptop  Dockerfile.rpi  package.json
ATC/cncjs-pendant-python/: main.py  pyproject.toml
ATC/config/: cncrc.json
ATC/gpio-relay/: README.md  main.py
src/app/containers/Settings/Events/: CreateRecord.jsx  TableRecords.jsx  UpdateRecord.jsx
src/app/i18n/en/: resource.json
src/server/controllers/Grbl/: GrblController.js
